<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenA100"
    tools:context=".ContactoActivity">

    <ImageView
        android:id="@+id/ivLinkedin"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout"
        app:srcCompat="@drawable/linkedin_svgrepo_com" />

    <ImageView
        android:id="@+id/ivWsp"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLinkedin"
        app:srcCompat="@drawable/whatsapp_symbol_logo_svgrepo_com" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/about_me"
        style="@style/title_about"
        android:background="@color/deep_purple900"
        android:paddingTop="50dp"
        android:paddingBottom="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:text="@string/messagge"
        style="@style/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWsp" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:background="@color/red900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensaje" />

    <Button
        android:id="@+id/btnLinkedin"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/linkedin"
        style="@style/redes"
        android:backgroundTint="@color/gray300"
        app:layout_constraintStart_toEndOf="@+id/ivLinkedin"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/call"
        style="@style/redes"
        android:backgroundTint="@color/gray300"
        app:layout_constraintStart_toEndOf="@+id/ivWsp"
        app:layout_constraintTop_toBottomOf="@+id/btnLinkedin" />

    <Button
        android:id="@+id/btnContartarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/contact_me"
        style="@style/title_about"
        android:backgroundTint="@color/light_green500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>