<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/brown900"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/llPerfil"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="29dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <ImageView
        android:id="@+id/ivPerfil"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="29dp"
        android:elevation="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:id="@+id/tvDescripcion"
        style="@style/title_presentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow900"
        android:padding="32dp"
        android:text="@string/presentation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPerfil"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/llh1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red300"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion">
        >

        <TextView
            android:id="@+id/tvLvlExp"
            style="@style/lbl_experiencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_experience" />

        <TextView
            android:id="@+id/tvResExp"
            style="@style/res_experiencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llh2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red50"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llh1">

        <TextView
            android:id="@+id/tvLblMot"
            style="@style/lbl_motivacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_motivation" />

        <TextView
            android:id="@+id/tvResMot"
            style="@style/res_motivacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res_motivation" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="130dp"
        android:layout_height="135dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="340dp"
        android:elevation="2dp"
        android:text="@string/share"
        style="@style/lbl_experiencia"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>